# lyricspro

./: .gitignore  CLERK_PRODUCTION_SETUP.md  CONFIGURAR_R2_CORS.md  CORRIGIR_R2_CREDENTIALS.md  DEBUG_BIBLIOTECA_VAZIA.md  DEPLOY-PRODUCTION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  DEPLOY_VERCEL.md  DESIGNSYSTEM.MD  DESIGN_IMPROVEMENTS.md  DIAGNOSTICO_PRODUCAO.md  IMPLEMENTACAO_COMPLETA.md  PRODUCTION_ENV_GUIDE.md  PRODUCTION_READY.md  README.md  TRIGGER_DEV_PRODUCTION_SETUP.md  VERCEL_ENV_COPY_PASTE.txt  analise-custos-precificacao.md  campos-cadastro-obras-fonogramas (1).md  docker-compose.yml  prd.md  registrotriggerdev.md  render.yaml  resultado_completo.json
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.production.txt  requirements.txt  setup.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: health.py  library.py  transcription.py  upload.py
backend/app/models/: __init__.py  schemas.py  transcription.py
backend/app/services/: __init__.py  notification.py  storage.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/app/workers/processors/: __init__.py  audio_extractor.py  diarizer.py  noise_reducer.py  post_processor.py  punctuator.py  transcriber.py  vocal_separator.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: API.md  DEPLOYMENT.md
frontend/: .env.example  .env.local.example  .env.production  BUILD-ELECTRON.md  CLERK-REMOVAL-ELECTRON.md  COMO-USAR-EXE.md  ELECTRON-SETUP.md  README.md  (+27 more)
(+61 files in other folders)
