[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-backend"
version = "1.0.0"
description = "Sistema avançado de transcrição com IA"
authors = [{name = "Erick", email = "erick@example.com"}]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
